--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=taskmaster
+
+# 1. Force a specific database name (No more random UUIDs!)
+spring.datasource.url=jdbc:h2:mem:taskdb
+
+# 2. Default username (Spring does this anyway, but good to be explicit)
+spring.datasource.username=sa
+spring.datasource.password=
+
+# 3. Enable the H2 Console so you can see it in the browser
+spring.h2.console.enabled=true
