Switched from H2 database to PostgreSQL and removed dummy data, the final Project is now Ready, MADE BY SHASHWAT TRIVEDI.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 spring.application.name=taskmaster
 
-# 1. Force a specific database name (No more random UUIDs!)
-spring.datasource.url=jdbc:h2:mem:taskdb
+## 1. Force a specific database name (No more random UUIDs!)
+#spring.datasource.url=jdbc:h2:mem:taskdb
+#
+## 2. Default username (Spring does this anyway, but good to be explicit)
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+## 3. Enable the H2 Console so you can see it in the browser
+#spring.h2.console.enabled=true
 
-# 2. Default username (Spring does this anyway, but good to be explicit)
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/TaskMaster
+spring.datasource.username=postgres
+spring.datasource.password=${DB_PASSWORD}
 
-# 3. Enable the H2 Console so you can see it in the browser
-spring.h2.console.enabled=true
+//hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
