feat: production- ready with neon DB, CROS, Procfile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=taskmaster
+#spring.application.name=taskmaster
 
 ## 1. Force a specific database name (No more random UUIDs!)
 #spring.datasource.url=jdbc:h2:mem:taskdb
@@ -10,11 +10,38 @@ spring.application.name=taskmaster
 ## 3. Enable the H2 Console so you can see it in the browser
 #spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/TaskMaster
-spring.datasource.username=postgres
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://localhost:5432/TaskMaster
+#spring.datasource.username=postgres
+#spring.datasource.password=${DB_PASSWORD}
+#
+#//hibernate
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
 
-//hibernate
+# ========================
+# PRODUCTION CONFIGURATION
+# ========================
+
+# PostgreSQL Database (values will come from Render/Neon environment variables)
+spring.application.name=taskmaster
+
+# Database - reads from environment variables
+# Locally: set env vars in IntelliJ Run Config
+# On Render: set env vars in Render Dashboard
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/TaskMaster}
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=${SHOW_SQL:true}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Server
+server.port=${PORT:8080}
+
+# CORS
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:4200}
